Create a proposal list
