# propostas/delivery/http/proposal_handler.go
@@ -1,6 +1,7 @@
 package http
 
 import (
+	"context"
 	"log"
 	"net/http"
 
@@ -25,7 +26,31 @@ func NewProposalHandler(e *echo.Echo, pu domain.ProposalUseCase) {
 		AUsecase: pu,
 	}
 
-	e.POST("/v1/proposal/create/:token", handler.CreateProposal)
+	e.POST("/v1/proposal/create", handler.CreateProposal)
+	e.GET("/v1/proposal", handler.GetAllProposal)
+}
+
+// GetAllUsers godoc
+// @Summary Show all users.
+// @Description Get all users list.
+// @Tags Proposal
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Accept */*
+// @Produce json
+// @Success 200 {object} entity.Proposal_Data
+// @Router /v1/proposal [get]
+func (ph *proposalHandler) GetAllProposal(c echo.Context) error {
+	ctx := c.Request().Context()
+	if ctx == nil {
+		ctx = context.Background()
+	}
+
+	data, err := ph.AUsecase.GetAllProposal()
+	if err != nil {
+		return c.JSON(getStatusCode(err), Response{Message: err.Error()})
+	}
+
+	return c.JSON(http.StatusOK, data)
 }
 
 // CreateProposal godoc
@@ -33,21 +58,20 @@ func NewProposalHandler(e *echo.Echo, pu domain.ProposalUseCase) {
 // @Description Create UsProposaler.
 // @Tags Proposal
 // @Accept json
-// @Param token path string true "Token"
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
 // @Param Body body entity.Send_Proposal_Data true "The body to create a proposal"
 // @Produce json
 // @Success 200 {object} entity.Receive_Proposal_Data
-// @Router /v1/proposal/create/{token} [post]
+// @Router /v1/proposal/create [post]
 func (ph *proposalHandler) CreateProposal(c echo.Context) error {
+	token := middlewares.GetToken(c)
+	userId := middlewares.GetUserIDJWT(token)
 	p := new(entity.Send_Proposal_Data)
 	if err := c.Bind(p); err != nil {
 		return err
 	}
 
-	token := c.Param("token")
-	userID := middlewares.GetUserIDJWT(token)
-
-	p.ProposalUserID = userID
+	p.ProposalUserID = userId
 
 	_, err := ph.AUsecase.CreateProposal(p)
 	if err != nil {
